--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-validator": "^6.10.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.19"
+    "mongoose": "^5.11.19",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
