--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "proyecto final rolling code school",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./index.js"
+    "start": "nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
