--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "proyecto final rolling code school",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js"
   },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
